fix: margin removed from logo on mobile devices

--- a/onlyoffice_odoo/static/src/css/res_config_settings_views.css
+++ b/onlyoffice_odoo/static/src/css/res_config_settings_views.css
@@ -31,10 +31,6 @@
 }
 
 @media (max-width: 767px) {
-    .onlyoffice_link_pane {
-        margin-left: 0;
-    }
-
     .onlyoffice_link_container {
         width: 345px;
         height: 169px;
